update jave version and dependencies