@@ -16,13 +16,15 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<postgresql.r2dbc.version>1.0.3.RELEASE</postgresql.r2dbc.version>
-		<r2dbc.migrate.version>2.10.3</r2dbc.migrate.version>
-		<postgresql.jdbc.version>42.7.1</postgresql.jdbc.version>
-		<h2database.version>2.2.222</h2database.version>
-		<checkstyle.plugin.version>3.3.0</checkstyle.plugin.version>
-		<checkstyle.version>9.3</checkstyle.version>
-		<jacoco.plugin.version>0.8.10</jacoco.plugin.version>
+		<apache.commons.version>3.17.0</apache.commons.version>
+		<checkstyle.plugin.version>3.6.0</checkstyle.plugin.version>
+		<checkstyle.version>10.21.0</checkstyle.version>
+		<h2database.version>2.3.232</h2database.version>
+		<jacoco.plugin.version>0.8.12</jacoco.plugin.version>
+		<maven.plugin.version>3.13.0</maven.plugin.version>
+		<postgresql.jdbc.version>42.7.4</postgresql.jdbc.version>
+		<postgresql.r2dbc.version>1.0.7.RELEASE</postgresql.r2dbc.version>
+		<surefire.plugin.version>3.5.2</surefire.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -43,12 +45,6 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>r2dbc-postgresql</artifactId>
 			<version>${postgresql.r2dbc.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>name.nkonev.r2dbc-migrate</groupId>
-			<artifactId>r2dbc-migrate-spring-boot-starter</artifactId>
-			<version>${r2dbc.migrate.version}</version>
 		</dependency>
 
 		<dependency>
@@ -87,6 +83,29 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.plugin.version}</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<release>${java.version}</release>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-configuration-processor</artifactId>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -99,6 +118,100 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${surefire.plugin.version}</version>
+				<configuration>
+					<argLine>@{argLine} -XX:+EnableDynamicAgentLoading</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>coverage-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>coverage-report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<exclude>com/scurtis/istudy/config/*</exclude>
+								<exclude>com/scurtis/istudy/controller/*</exclude>
+								<exclude>com/scurtis/istudy/dto/*</exclude>
+								<exclude>com/scurtis/istudy/entity/*</exclude>
+								<exclude>com/scurtis/istudy/repository/*</exclude>
+								<exclude>com/scurtis/istudy/Application.class</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<!-- Require >80% Coverage -->
+					<execution>
+						<id>coverage-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<excludes>
+								<exclude>com/scurtis/istudy/config/*</exclude>
+								<exclude>com/scurtis/istudy/controller/*</exclude>
+								<exclude>com/scurtis/istudy/dto/*</exclude>
+								<exclude>com/scurtis/istudy/entity/*</exclude>
+								<exclude>com/scurtis/istudy/repository/*</exclude>
+								<exclude>com/scurtis/istudy/Application.class</exclude>
+							</excludes>
+							<rules>
+								<rule>
+									<element>CLASS</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>80%</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>${checkstyle.plugin.version}</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>${checkstyle.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<configLocation>/config/checkstyle/checkstyle.xml</configLocation>
+					<includeTestSourceDirectory>true</includeTestSourceDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
